    (Gaurav Kanade via cnauroth)

    HADOOP-12560: Fix sprintf warnings in {{DomainSocket.c}} introduced by
    HADOOP-12344 (Mingliang Liu via Colin P. McCabe)

    HADOOP-12567: NPE in SaslRpcServer (Sergey Shelukhin via cnauroth)

    HADOOP-8419. Fixed GzipCode NPE reset for IBM JDK. (Yu Li via eyang)

    HADOOP-11149. TestZKFailoverController times out. (Steve Loughran
    via ozawa)

    HADOOP-9822. Create constant MAX_CAPACITY in RetryCache rather than
    hard-coding 16 in RetryCache constructor. (Tsuyoshi Ozawa via wheat9)

    HADOOP-11954. Solaris does not support RLIMIT_MEMLOCK as in Linux
    (Alan Burlison via aw)

    HADOOP-12598. Add XML namespace declarations for some hadoop/tools modules.
    (Xin Wang via aajisaka)

    HADOOP-12468. Partial group resolution failure should not result in user
    lockout. (Wei-Chiu Chuang via Yongjun Zhang)

    HADOOP-12656. MiniKdc throws "address in use" BindException.
    (Wei-Chiu Chuang via Arpit Agarwal)

    HADOOP-12051. ProtobufRpcEngine.invoke() should use Exception.toString()
    over getMessage() in logging/span events. (Varun Saxena via stevel)

    HADOOP-12017. Hadoop archives command should use configurable replication
    factor when closing (Bibin A Chundatt via vinayakumarb)

    HADOOP-12239. StorageException complaining " no lease ID" when updating
    FolderLastModifiedTime in WASB. (Duo Xu via cnauroth)

    HADOOP-12245. References to misspelled REMAINING_QUATA in
    FileSystemShell.md. (Gabor Liptak via aajisaka)

    HADOOP-12175. FsShell must load SpanReceierHost to support tracing
    (Masatake Iwasaki via Colin P. McCabe)

    HADOOP-10945. 4-digit octal umask permissions throws a parse error (Chang
    Li via jlowe)

    HADOOP-7824. NativeIO.java flags and identifiers must be set correctly for
    each platform, not hardcoded to their Linux values (Martin Walsh via Colin
    P. McCabe)

    HADOOP-12268. AbstractContractAppendTest#testRenameFileBeingAppended