@@ -873,6 +873,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-11149. TestZKFailoverController times out. (Steve Loughran
     via ozawa)
 
+    HADOOP-11677. Add cookie flags for logs and static contexts.
+    (nijel via wheat9)
+
     HADOOP-9822. Create constant MAX_CAPACITY in RetryCache rather than
     hard-coding 16 in RetryCache constructor. (Tsuyoshi Ozawa via wheat9)
 
